// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackBadge Renders status 'beta' correctly 1`] = `
<div
  class="feedbackBadge"
>
  <span
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    This feature is currently in beta
  </span>
  <span
    aria-hidden="true"
    class="productStatusBadge productStatusBadge"
    status="beta"
  >
    beta
  </span>
  <a
    class="anchor"
    href="mailto:support@sourcegraph.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Share feedback
  </a>
</div>
`;

exports[`FeedbackBadge Renders status 'experimental' correctly 1`] = `
<div
  class="feedbackBadge"
>
  <span
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    This feature is currently in experimental
  </span>
  <span
    aria-hidden="true"
    class="productStatusBadge productStatusBadge"
    status="experimental"
  >
    experimental
  </span>
  <a
    class="anchor"
    href="mailto:support@sourcegraph.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Share feedback
  </a>
</div>
`;

exports[`FeedbackBadge Renders status 'new' correctly 1`] = `
<div
  class="feedbackBadge"
>
  <span
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    This feature is currently in new
  </span>
  <span
    aria-hidden="true"
    class="productStatusBadge productStatusBadge"
    status="new"
  >
    new
  </span>
  <a
    class="anchor"
    href="mailto:support@sourcegraph.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Share feedback
  </a>
</div>
`;

exports[`FeedbackBadge Renders status 'wip' correctly 1`] = `
<div
  class="feedbackBadge"
>
  <span
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    This feature is currently in wip
  </span>
  <span
    aria-hidden="true"
    class="productStatusBadge productStatusBadge"
    status="wip"
  >
    wip
  </span>
  <a
    class="anchor"
    href="mailto:support@sourcegraph.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Share feedback
  </a>
</div>
`;

exports[`FeedbackBadge renders a FeedbackBadge 1`] = `
<div
  class="feedbackBadge"
>
  <span
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    This feature is currently in new
  </span>
  <span
    aria-hidden="true"
    class="productStatusBadge productStatusBadge"
    status="new"
  >
    new
  </span>
  <a
    class="anchor"
    href="mailto:support@sourcegraph.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Share feedback
  </a>
</div>
`;
